--- a/FCC-Tribute Page Project/index.html
+++ b/FCC-Tribute Page Project/index.html
@@ -6,7 +6,7 @@
     <title>Tribute Page</title>
     <link rel="stylesheet" href="style.css">
     <!-- Supernatural Knight font -->
-    <link href="https://fonts.cdnfonts.com/css/supernatural-knight" rel="stylesheet">
+    <!-- <link href="https://fonts.cdnfonts.com/css/supernatural-knight" rel="stylesheet"> -->
 </head>
 <body>
     <!-- Logo -->
